Fix navigation misaligned

--- a/_assets/css/components/_nav.scss
+++ b/_assets/css/components/_nav.scss
@@ -58,7 +58,7 @@ nav {
       h1 {
         font-size: inherit;
         font-weight: inherit;
-        margin: inherit;
+        margin: 0;
         font-family: inherit;
         display: inline-block;
       }
